Scala 3 and remove HTML code